Reduce latency by breaking all_tests into 2 jobs

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,9 @@ pr:
 
 
 jobs:
-- job: all_tests_jdk8
+- job: junit_tests_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
    - misc_jdk11
   pool:
     vmImage: 'ubuntu-latest'
@@ -20,20 +20,42 @@ jobs:
   steps:
   - checkout: self
     fetchDepth: 25
-  - bash: ./checker/bin-devel/test-cftests-all.sh
-    displayName: test-cftests-all.sh
-- job: all_tests_jdk11
+  - bash: ./checker/bin-devel/test-cftests-junit.sh
+    displayName: test-cftests-junit.sh
+- job: junit_tests_jdk11
   pool:
     vmImage: 'ubuntu-latest'
   container: mdernst/cf-ubuntu-jdk11:latest
   steps:
   - checkout: self
     fetchDepth: 25
-  - bash: ./checker/bin-devel/test-cftests-all.sh
-    displayName: test-cftests-all.sh
+  - bash: ./checker/bin-devel/test-cftests-junit.sh
+    displayName: test-cftests-junit.sh
+- job: nonjunit_tests_jdk8
+  dependsOn:
+   - nonjunit_tests_jdk11
+   - misc_jdk11
+  pool:
+    vmImage: 'ubuntu-latest'
+  container: mdernst/cf-ubuntu-jdk8:latest
+  steps:
+  - checkout: self
+    fetchDepth: 25
+  - bash: ./checker/bin-devel/test-cftests-nonjunit.sh
+    displayName: test-cftests-nonjunit.sh
+- job: nonjunit_tests_jdk11
+  pool:
+    vmImage: 'ubuntu-latest'
+  container: mdernst/cf-ubuntu-jdk11:latest
+  steps:
+  - checkout: self
+    fetchDepth: 25
+  - bash: ./checker/bin-devel/test-cftests-nonjunit.sh
+    displayName: test-cftests-nonjunit.sh
 - job: misc_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
   pool:
     vmImage: 'ubuntu-latest'
@@ -54,7 +76,8 @@ jobs:
     displayName: test-misc.sh
 - job: cf_inference_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
    - cf_inference_jdk11
   pool:
@@ -76,7 +99,8 @@ jobs:
     displayName: test-cf-inference.sh
 - job: daikon_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
    - daikon_jdk11
   pool:
@@ -98,7 +122,8 @@ jobs:
     displayName: test-daikon.sh
 - job: guava_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
    - guava_jdk11
   pool:
@@ -122,7 +147,8 @@ jobs:
     displayName: test-guava.sh
 - job: plume_lib_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
    - plume_lib_jdk11
   pool:
@@ -144,7 +170,8 @@ jobs:
     displayName: test-plume-lib.sh
 - job: downstream_jdk8
   dependsOn:
-   - all_tests_jdk11
+   - junit_tests_jdk11
+   - nonjunit_tests_jdk11
    - misc_jdk11
    - downstream_jdk11
   pool:
